--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:theme="@style/Theme.Lsb3"
             tools:targetApi="31">
         <activity
-                android:name=".MainActivity"
+                android:name=".ui.view.MainActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,8 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AddEditCardActivity"></activity>
-        <activity android:name=".ShowCardActivity"></activity>
+        <activity android:name=".ui.view.AddEditCardActivity"></activity>
+        <activity android:name=".ui.view.ShowCardActivity"></activity>
     </application>
 
 </manifest>
