--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools">
 
     <application
+            android:networkSecurityConfig="@xml/network_security_config"
             android:name=".MyApplication"
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,8 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.view.AddEditCardActivity"></activity>
-        <activity android:name=".ui.view.ShowCardActivity"></activity>
+
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
